"inference working without errors"
Former-commit-id: 8c5ac53d71f2e2b97edbb81b8e2c9ef26314139a [formerly f2ed66b0204437a3a1057025eef4b93eb2751595] [formerly 80c05686af1fe06ca2805fb47e9c0a44d9484e02] [formerly 922bd12761df2059eadb82e331f28641632da9db [formerly 968fea87bd5edd425ec28786b7cc2a1a57a73a4c] [formerly 80c05686af1fe06ca2805fb47e9c0a44d9484e02 [formerly e8cc09ca8e954a6f4bf43fba401a7472843ded4d]]]
Former-commit-id: 9fc9da8a95a234a1232a65e28af2deac1ed2ec5b [formerly 34ab6700fe549cb21f50c951d7d1f2f80c47f9c9] [formerly ff7108799e497a7e52ceccfdc96b8c06f9aee410 [formerly 7aa93ea64858214335101f5871b89bf9013e5dac]]
Former-commit-id: ff7108799e497a7e52ceccfdc96b8c06f9aee410
Former-commit-id: 839f477f93baba3796e391aa623512492cd29a00
Former-commit-id: 21f92bfa3e3f9f21098f3c42030b4b92283a4848

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ./experiments/mobileRobot/conf/data/
 *.pickle
 *.pkl
+./experiments/latent_plots/
+./experiments/output/
+./experiments/saved_models/
