self.device avoided clone -todo test
Former-commit-id: 3cfbd215373cfe1a53fc41cdffa1175e226b970b [formerly 53e84e5e308d7b75570acadbb13ea542ff782803] [formerly e40ce0f605389635819e268337bfb4da5b805168] [formerly 947e6aee128397adde8dacf6c3a65a598576e832 [formerly b06385b3b22f1f44617e0c1ae9d167285049405b] [formerly e40ce0f605389635819e268337bfb4da5b805168 [formerly 974747a44386dc18af35edc025440d0b8d385b86]]] [formerly e1b7a991faa4d3d3d3daec74fb08541e4dededab [formerly 3ca326b55036c895df23076199f88e76c38298f1] [formerly 14dad04c6c682830f529faf076f5c722274736c2] [formerly c3ce10f6c57924ab19b40dd6e73ad18c4cbde810 [formerly 42ca28495cff0ef488efaee40fcc23fa18fac7b0] [formerly 14dad04c6c682830f529faf076f5c722274736c2 [formerly 2c270826ef838651801f2a140b7c72057fc2a4bc]]]]
Former-commit-id: 41b2961238b11109460e7b0734eb9c738c9466de [formerly 5b8db42116c4301ae7b25cf240f03d2ccf5bdcf1] [formerly edd0cc2058060b08b79f908df353b1939e938272] [formerly fc5bb055994cc46eb976b30c3df641cf8db0c3d4 [formerly 7592ce9ec3bc254fd710bf59d8e53bbe7708d697] [formerly edd0cc2058060b08b79f908df353b1939e938272 [formerly a3f552fc9e5b2cdc956ed2508479b602dc1f9d66]]]
Former-commit-id: 8d16834cb1c1f569063224188195a447217602ab [formerly a20188bc7bfe099080d6071bc6c7ee88af839de2] [formerly 3911040598ecb21295064bbd1f286b79f9d9b1cb [formerly ef50678728467c398c1e33acee8950cc64923cef]]
Former-commit-id: 3911040598ecb21295064bbd1f286b79f9d9b1cb
Former-commit-id: d86e142c30a4daf85f7c33d701838598299ff82c
Former-commit-id: 49c0ac43659379cb07bd9b7620d0e3353e5ba2d6

--- a/experiments/mobileRobot/conf/model/default_mts3.yaml
+++ b/experiments/mobileRobot/conf/model/default_mts3.yaml
@@ -5,7 +5,7 @@ defaults:
 
 wandb:
   log: True
-  project_name: 'xxx'
+  project_name: 'debugMobileRobot'
   exp_name: 'mts3_new'
   sweep: False
   sweep_id: null
