readme initial + converging untested mts3
Former-commit-id: db416d4baf26e09acb94c4956a373c24c5c0557e [formerly 1813c0615e267a266eb8ff856a6d0f7b129f87bb] [formerly d6a3ce8ef59b6309e0769e57618f2d1128b13fc7] [formerly fce25cbea9fc94ccef0bac6cc2a6d4630a8a960b [formerly 0dcd1cd7ffc4d39f9ed21c6c3c5ee75ac98e06a6] [formerly d6a3ce8ef59b6309e0769e57618f2d1128b13fc7 [formerly 81818fa9084310fc3312bd58f2886c346d809120]]] [formerly 260f134cd6b3427eb73ad955e8ace83dd5e06b14 [formerly c3a0dbf9e62171947edc926d6c70259d9861d61e] [formerly dda57778bd528a003fda80a36619dfb9b1acc836] [formerly bc109c3399fb57416197e177f5eb4cc798e1f071 [formerly 6cc7bf39c60972734e2e4eb2f59197787fedf4a5] [formerly dda57778bd528a003fda80a36619dfb9b1acc836 [formerly e338133c15bc6b1731cb38e81f4f8d9e3f7a8169]]]]
Former-commit-id: 194fa695e0807230ace94ca9a1e4fe6116a1750b [formerly 18e193cb66b7e758acfcf12a18b6cdde443adc4a] [formerly bf62f0f7bdfa2d072f7b58b6a883561ab12db9bc] [formerly e8cb8bfff55d24ae42b75200f81542e667321dd8 [formerly b651cd354056ee045d4723bcff0ba43f09a6f465] [formerly bf62f0f7bdfa2d072f7b58b6a883561ab12db9bc [formerly 6f7afbfebd92c9f5192d8502e86522285baa5c77]]]
Former-commit-id: 2b1cda0df1f92ab81d0185a94e2075c77bb570f9 [formerly 78287183e6cb1b91c3750caae949a7695bc6ea34] [formerly 0edcebfde4926c015268c89e0fd514488cc6aab7 [formerly d9dac9d1d42df7a0013cbb513bb3ced8d49537eb]]
Former-commit-id: 0edcebfde4926c015268c89e0fd514488cc6aab7
Former-commit-id: 4c732a7c04f981604a97b7a1bca198d044e798cf
Former-commit-id: 7ea433d3ff47cf12aad263431d096ed745f887ff

--- a/experiments/mobileRobot/conf/model/learn/default.yaml
+++ b/experiments/mobileRobot/conf/model/learn/default.yaml
@@ -2,8 +2,8 @@ name: "_default"
 model:
   load: False
   id: 2e4hzn33
-epochs: 10
-batch_size: 200
+epochs: 15
+batch_size: 120
 curriculum: True
 obs_imp: 0.15
 task_imp: 0.05
@@ -13,3 +13,8 @@ plot_traj: False
 lr: 0.003
 save_model: True
 loss: 'nll'
+data_parallel: 
+  enable: True
+  device_ids: 
+    - 0
+    
