Added proper multistep and logs folder outside exp
Former-commit-id: 42fe7efb7514a2a963c3e96fe857c432ae763a70 [formerly 9a91ec6cf542871a57a659f12225998569073239] [formerly 7cd32c6ad76310586575f73ad818da7d05a47eca] [formerly 2ad32056dc50f0e79284d53b732e1f8ab9f048ab [formerly ee93b5157e1030db02e80a9f1617b1dff5256f41] [formerly 7cd32c6ad76310586575f73ad818da7d05a47eca [formerly 12551c29dbf8697418552324f55f3d941d8c783d]]] [formerly 7fd974db5aefa8ccfdb16cc515e30f7692163599 [formerly 3237d638569a2ef3d3da82b46f6b35829fa236e1] [formerly cfaae92fdf0fa1ce7786bc4a2314b0cf66a05631] [formerly 267c173eb4c0853636dbdec8b2a7bb6068027f27 [formerly 52ec66243e11fe34de4821a285867483482ae537] [formerly cfaae92fdf0fa1ce7786bc4a2314b0cf66a05631 [formerly ed320c444ad20008d1569d036b9645e56d89f567]]]]
Former-commit-id: 213d8f566dc5e882434ad1082fd1efe8ffdbba8f [formerly 11e279cc0d596f2c4ff149a8d6a82d735e7c1502] [formerly 4a7a83e0cd06a24ffaf1af36ab58fa97cc1461c6] [formerly 32f285789374d22c369c0d0b584e02fd7ce326fd [formerly 067ccb89645c61ac34ce1999fcc8ccddb6f2fa7c] [formerly 4a7a83e0cd06a24ffaf1af36ab58fa97cc1461c6 [formerly 6e5c52c1483b61ce19e45005bac43c910914d749]]]
Former-commit-id: dfa8ebac16f107cba91c4347121f8141a046bc2f [formerly ae545313e70624c0fc09e223bfca185611587f63] [formerly 7ef97ad4d9e1d201c9bc5c50b4f5164b42c956bb [formerly e8fd5008d6f1966cee5326a1f51de4f6c5e3b2f9]]
Former-commit-id: 7f043da7a1310d30d1751b24105adaba509aa6fd [formerly 7ef97ad4d9e1d201c9bc5c50b4f5164b42c956bb]
Former-commit-id: 3313cd7c7958684ea80acc53722373d53bf1597b
Former-commit-id: 7326cd1a5965e8c75de41272e08092ea2e36cb8c

--- a/experiments/mobileRobot/conf/model/learn/default.yaml
+++ b/experiments/mobileRobot/conf/model/learn/default.yaml
@@ -2,7 +2,7 @@ name: "_default"
 model:
   load: False
   id: 2e4hzn33
-epochs: 15
+epochs: 1
 batch_size: 120
 curriculum: True
 obs_imp: 0.15
@@ -14,7 +14,7 @@ lr: 0.003
 save_model: True
 loss: 'nll'
 data_parallel: 
-  enable: True
+  enable: False
   device_ids: 
     - 0
     
