unified cov and mean structure as block diag everywhere
Former-commit-id: 8741eab28accdcdb917715cddd09ecb4f12faedf [formerly 9834ccf75bd0f6a611d024c04c041e296957d06d] [formerly 4b46ac47c382f1e181f160cf2cdb9b3ff9f21c44] [formerly 68bbd43ab8a824a4eafc0ab2e0e200cc273661e6 [formerly 2fcc6b2cf5aaca75ef84160cdbcf450fe0d9d8f0] [formerly 4b46ac47c382f1e181f160cf2cdb9b3ff9f21c44 [formerly c19d91b0249520d36f120bd7d3f4fb5684133b7f]]] [formerly a90dcb8ccc253296dc460ee8d5a5a46d4ad084d6 [formerly b6c8325c91f7bc70824034a47288adad8ed0ec1b] [formerly 555ade4632ca5a6a00ded439250cf10ad1cf8430] [formerly a1e301bc6be52f6b935fd0b0fc1beab523fa2bf8 [formerly fa72d05361673b8377ec1c991f61630ef22cb9e1] [formerly 555ade4632ca5a6a00ded439250cf10ad1cf8430 [formerly 2b172ce25985f92ec02f97c40c2c8000cf06fe95]]]]
Former-commit-id: c710c4708db7b6a68a8aefee6b33badb524ef029 [formerly 76e637ab2c7e641c9712c73cb9e1d400368fdbd0] [formerly c29abb2dbc61ee4aef80b0d7e7e5226608c3069b] [formerly e112a694bf65db6f492cdcdeda6e4707063dfc0b [formerly 9011b00d4342977d9c34b8e82401fed0f67f85c1] [formerly c29abb2dbc61ee4aef80b0d7e7e5226608c3069b [formerly 1a913975a946363c936c284a470a1cae93db4ecf]]]
Former-commit-id: a1cfb7528ec9ba85080ff21e9a7fe5315c4f6517 [formerly 68c2c23fcb619befd3bedda56f99b53a8eee7ef4] [formerly bfa32fa211f8edc88496a179923273a2b7b961fc [formerly ce2ad815077c704454f2641c764f988f1840d598]]
Former-commit-id: 7ee2082405be2391db0676591f05dfd94dc7ff20 [formerly bfa32fa211f8edc88496a179923273a2b7b961fc]
Former-commit-id: ebd8c3a18edeb343fbbd3694058c59ef2aa70340
Former-commit-id: a643af8060747828d1c998ab984f6a64905857d0

--- a/experiments/mobileRobot/conf/model/default_mts3.yaml
+++ b/experiments/mobileRobot/conf/model/default_mts3.yaml
@@ -26,6 +26,7 @@ mts3:
     multi_gaussian_l_transform: False
     trans_covar: 0.1
     learn_initial_state_covar: False
+    initial_state_covar: 10
     abstract_obs_encoder:
       hidden_units_list: [ 240 ]
       out_norm: 'post'
