--- a/experiments/mobileRobot/conf/model/default_hiprssm.yaml
+++ b/experiments/mobileRobot/conf/model/default_hiprssm.yaml
@@ -6,14 +6,17 @@ defaults:
 wandb:
   log: True
   project_name: 'debugMobileRobot'
-  exp_name: 'acrkn'
+  exp_name: 'hiprssm'
   sweep: False
   sweep_id: null
 
-acrkn:
+hiprssm:
+  context_len: 75
+  clip_gradients: True
   latent_obs_dim: 30 #for contextual rssm
   pixel_obs: False
-  initial_state_covar: 10 ## for both hierarchies same (chaneg later ??)
+  initial_state_covar: 10 ## (chaneg later ??)
+  initial_task_covar: 1 ## (chaneg later ??)
 
   worker:
     addIdentity: True
@@ -21,6 +24,10 @@ acrkn:
     decode_var: True
     obs_encoder:
       hidden_units_list: [ 120 ]
+      out_norm: 'post'
+      variance_activation: 'softplus'
+    task_encoder:
+      hidden_units_list: [ 240 ]
       out_norm: 'post'
       variance_activation: 'softplus'
     trans_net_hidden_units: [ ]
