data download links + parallel + v2
Former-commit-id: 4e0e4641d1315bbb2e41cd465554e019ede18fec [formerly 27e69d29f6a72c1711d8266a0498fb675fdb18ed] [formerly 28607d5986bf02717e3baf7323cbd333c8743c03] [formerly 5751a80675b7a29e90e9156c11928e5b0498cd0d [formerly d2a4ad24ca833d2926d4da06272ad5f4ca24546b] [formerly 28607d5986bf02717e3baf7323cbd333c8743c03 [formerly adac5c0f081c12a7f78222ee5f8e34f1330d9287]]] [formerly 62923a17ba1aea07365f71c6a3f0a3ba9693930f [formerly c2d9abc098449bafee117c6417913b44ed39ab67] [formerly ed0054938fd3c7299c16b7272200a2b929338a53] [formerly ac72607f4b0fff134f3ba62dc0f949bf5145cbf0 [formerly ff32cdbabda62bbadc6853d471504541869c16ba] [formerly ed0054938fd3c7299c16b7272200a2b929338a53 [formerly f5eb68582817987f7676f223b2fcca17eff407fa]]]]
Former-commit-id: db555d469ba103b3e5c8ff850cc1e4ade4831332 [formerly c2f5895c40056424e87102efa065a47f52783199] [formerly c6247031a2f4980c4830b6a39ee6ed05c9623369] [formerly 358469b46a7f732f128971cedf9739de0fd25675 [formerly 9985beb1aba149afc8be2b39374e0d0d79e7d959] [formerly c6247031a2f4980c4830b6a39ee6ed05c9623369 [formerly 1cb5cf9361f64bf492bd208fff0c06c162561dc1]]]
Former-commit-id: 11eb4e2915c42e3dd6820445be72f5fe3bb3e97b [formerly 12fe1ea66ae60170106c2eb507681cd90bc90df7] [formerly 309bc34bf544694843f776541bc629de236bc59d [formerly eb05730af55e20781bf8d8474a66e2e272084c37]]
Former-commit-id: 35c0cd04d674f3f2bbcbe168638fe0eee668c316 [formerly 309bc34bf544694843f776541bc629de236bc59d]
Former-commit-id: 6d954049d5fbe037b3700c7f6238c48673a3255c
Former-commit-id: 493f14694af1ebfe638a822c16a5599171c6738d

--- a/experiments/mobileRobot/conf/model/data/train/dataSinMixLong.yaml
+++ b/experiments/mobileRobot/conf/model/data/train/dataSinMixLong.yaml
@@ -17,6 +17,7 @@ split:
   - [ 30,31,32,33,34,35,36,37,38,39,40 ]
 shuffle_split: null
 save_path: "/experiments/mobileRobot/conf/model/data/sinMixLongTrain.pkl"
+url: "https://bwsyncandshare.kit.edu/s/aQonrHoZrGq77xg/download"
 trajPerTask: 10
 downsample: 2
 episodic: False
