--- a/experiments/hydraulics/conf/model/learn/default.yaml
+++ b/experiments/hydraulics/conf/model/learn/default.yaml
@@ -4,14 +4,18 @@ model:
   id: 2e4hzn33
 epochs: 1
 clip_gradients: True
-batch_size: 50
-obs_imp: 0.9
+batch_size: 120
+curriculum: True
+obs_imp: 0.15
+task_imp: 0.05
+max_curriculums: 7
 latent_visualization: False
 plot_traj: False
-lr: 0.0003
+lr: 0.003
 save_model: True
 loss: 'nll'
 data_parallel:
   enable: False
   device_ids:
     - 0
+
