--- a/experiments/maze2d/conf/model/data/data_medium.yaml
+++ b/experiments/maze2d/conf/model/data/data_medium.yaml
@@ -8,14 +8,12 @@ num_testing_sequences: 10000 #from a set of given collected test trajectories cr
 episode_length: 30 #window length for a particular instance of hip-rssm
 num_episodes: 15 #number of hip-rssm instances that make a dp-rssm meta sequence during training / backpropagation
 tar_type: 'next_state' # Use "delta" argument to predict on the differences as targets. In other cases use "observations".
-load: False
-save: True
+load: True
+save: False
 standardize: True
-split:
-  - [ 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,41,42,43,44,45,46,47,48,49 ]
-  - [ 30,31,32,33,34,35,36,37,38,39,40 ]
 shuffle_split: 0.8
-save_path: "/experiments/maze/conf_dp/data/medium-Train.pkl"
+save_path: "/dataFolder/mts3_datasets_processed/mediumMaze.pkl"
+url: "https://bwsyncandshare.kit.edu/s/SmRYcDj9HnSx97r/download"
 trajPerTask: 10
 downsample: 1
 episodic: False
