more exps + data + url
Former-commit-id: 7d1b21e65e1ed8329ceb63b76b18b5c4d4fa30aa [formerly f467f52a79dd3372718dd0c5da9c5b9116d87c4e] [formerly bb516d95b15d767dffab220b4b22e1f594e93512 [formerly 51087a19fe63318e2a7e6f9795bd6a3dc155c180]] [formerly 8b95a69a16fcce8e555f00743a03438e7951e8f7 [formerly 6376a18bc23662e6f053e336f10970f77ddb2ac6] [formerly 51087a19fe63318e2a7e6f9795bd6a3dc155c180 [formerly 7c6755267361ea89add88e94c94c571e22af4906]]] [formerly 0a5316f9c453cbc2b9063c18d6ca3d0322ee9283 [formerly 205f9edfe359244f0af33ff285a683e477441a0e] [formerly 4ddd1537c77111d69361a099c60175dca3d0fe30] [formerly 913290120aa62535d3460206beb5e110b06e8df4 [formerly 5a184cc7a56924ef596bc6995a2ad91b4b72e3ab] [formerly 4ddd1537c77111d69361a099c60175dca3d0fe30 [formerly c534d36cd34fa88756df967d6516f645370953d3]]]]
Former-commit-id: 3559b7b3b8698fe866e7b6849fc8bde4df0172ee [formerly 8796845218a0acafce9435d1b0d7a5d98ba63d59] [formerly 2e34c2f6790463cfec3d107fb9b17a9ae3394767] [formerly 268cfec3b79d46aa9f993fd8a6c5fe74fd8ef210 [formerly d51322b05463daa703388bf7f8abbae47d721537] [formerly 2e34c2f6790463cfec3d107fb9b17a9ae3394767 [formerly 276964f9a8e8fe5ca3881fe9c348e2429f354e4a]]]
Former-commit-id: ec4a75a7e286053e964497889ade46b1c5dd7567 [formerly c17241e257570985baab5e25ec526cfabdfbaa00] [formerly d754faf7f0a1960a6bb988d1c23f01f7361010c8 [formerly 40d72adfbe1ebaea522fe513a5f05c4b9f99175a]]
Former-commit-id: ddc8950f71f1dc39b16f413def32855c819ae4ba [formerly d754faf7f0a1960a6bb988d1c23f01f7361010c8]
Former-commit-id: f8e4b00ccff2c5eacdee5de8735c69c0827d47fd
Former-commit-id: 867222ef82e3c371b9064794d5851bf1c3d56d7c

--- a/experiments/frankaKitchen/conf/model/default_acrkn.yaml
+++ b/experiments/frankaKitchen/conf/model/default_acrkn.yaml
@@ -1,7 +1,6 @@
 defaults:
   - learn: default_rnn
-  - data/train: data_complete
-  - data/test: data_complete
+  - data: data_complete
 
 wandb:
   log: True
