--- a/experiments/frankaKitchen/conf/model/default_mts3NoI.yaml
+++ b/experiments/frankaKitchen/conf/model/default_mts3NoI.yaml
@@ -1,7 +1,6 @@
 defaults:
   - learn: default
-  - data/train: data_complete
-  - data/test: data_complete
+  - data: data_complete
 
 wandb:
   log: True
