--- a/experiments/halfCheetah/conf/model/default_hiprssm.yaml
+++ b/experiments/halfCheetah/conf/model/default_hiprssm.yaml
@@ -1,7 +1,6 @@
 defaults:
   - learn: default_acrkn
-  - data/train: data_d4rl
-  - data/test: data_d4rl
+  - data: data_d4rl
 
 wandb:
   log: True
