--- a/experiments/hydraulics/conf/platform/horeka.yaml
+++ b/experiments/hydraulics/conf/platform/horeka.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 
 defaults:
-  - override /hydra/launcher: submitit_slurm
+  - override /hydra/launcher: clusterduck_slurm
   - _self_
 
 hydra:
