--- a/experiments/mobileRobot/conf/model/default_hiprssm.yaml
+++ b/experiments/mobileRobot/conf/model/default_hiprssm.yaml
@@ -1,7 +1,6 @@
 defaults:
   - learn: default_acrkn
-  - data/train: dataSinMixLong
-  - data/test: dataSinMixLong
+  - data: dataSinMixLong
 
 wandb:
   log: True
