--- a/experiments/halfCheetah/conf/model/default_mts3.yaml
+++ b/experiments/halfCheetah/conf/model/default_mts3.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - learn: default_acrkn
+  - learn: default
   - data: data_d4rl
 
 wandb:
@@ -11,7 +11,7 @@ wandb:
 
 mts3:
   clip_gradients: True
-  latent_obs_dim: 15 #for contextual rssm
+  latent_obs_dim: 30 #for contextual rssm
   pixel_obs: False
   time_scale_multiplier: 15
   initial_state_covar: 10 ## for both hierarchies same (chaneg later ??)
