layernorm, update step correction

--- a/experiments/frankaKitchen/conf/model/default_mts3.yaml
+++ b/experiments/frankaKitchen/conf/model/default_mts3.yaml
@@ -25,7 +25,7 @@ mts3:
     initial_state_covar: 10
     abstract_obs_encoder:
       hidden_units_list: [ 240 ]
-      out_norm: 'post'
+      out_norm: 'none'
       variance_activation: 'softplus'
       learn_initial_state_covar: False
       initial_state_covar: 10
@@ -36,7 +36,7 @@ mts3:
     abstract_act_encoder:
       hidden_units_list: [ 240 ]
       aggregator: 'BA'
-      out_norm: 'post'
+      out_norm: 'none'
       variance_activation: 'softplus'
       learn_initial_state_covar: False
       initial_state_covar: 10
@@ -50,7 +50,7 @@ mts3:
     decode_var: True
     obs_encoder:
       hidden_units_list: [ 120 ]
-      out_norm: 'post'
+      out_norm: 'none'
       variance_activation: 'softplus'
     trans_net_hidden_units: [ ]
     control_net_hidden_units: [ 120 ]
@@ -66,7 +66,6 @@ mts3:
     initial_state_covar: 10
     obs_decoder:
       hidden_units_list: [ 240 ]
-      out_norm: 'post'
       variance_activation: 'softplus'
 
   decode:
