--- a/experiments/maze2d/conf/model/default_mts3.yaml
+++ b/experiments/maze2d/conf/model/default_mts3.yaml
@@ -26,7 +26,7 @@ mts3:
     initial_state_covar: 10
     abstract_obs_encoder:
       hidden_units_list: [ 240 ]
-      out_norm: 'post'
+      out_norm: 'none'
       variance_activation: 'softplus'
       learn_initial_state_covar: False
       initial_state_covar: 10
@@ -37,7 +37,7 @@ mts3:
     abstract_act_encoder:
       hidden_units_list: [ 240 ]
       aggregator: 'BA'
-      out_norm: 'post'
+      out_norm: 'none'
       variance_activation: 'softplus'
       learn_initial_state_covar: False
       initial_state_covar: 10
@@ -51,7 +51,7 @@ mts3:
     decode_var: True
     obs_encoder:
       hidden_units_list: [ 120 ]
-      out_norm: 'post'
+      out_norm: 'none'
       variance_activation: 'softplus'
     trans_net_hidden_units: [ ]
     control_net_hidden_units: [ 120 ]
@@ -67,7 +67,6 @@ mts3:
     initial_state_covar: 10
     obs_decoder:
       hidden_units_list: [ 240 ]
-      out_norm: 'post'
       variance_activation: 'softplus'
 
   decode:
