--- a/experiments/halfCheetah/conf/model/data/data_d4rl.yaml
+++ b/experiments/halfCheetah/conf/model/data/data_d4rl.yaml
@@ -12,7 +12,7 @@ split:
   - [ 30,31,32,33,34,35,36,37,38,39,40 ]
 shuffle_split: 0.8
 save_path: "/dataFolder/mts3_datasets_processed/CheetahNeuripsData.pkl"
-url: "https://bwsyncandshare.kit.edu/s/LY662F3yxWxA99Z/download"
+url: "https://drive.google.com/uc?id=1MuJBYSNN3D6BRfGp0Eu7Hbz1roKOzcxN"
 trajPerTask: 10
 downsample: 1
 episodic: False
