--- a/experiments/maze2d/conf/model/data/data_medium.yaml
+++ b/experiments/maze2d/conf/model/data/data_medium.yaml
@@ -9,7 +9,7 @@ save: False
 standardize: True
 shuffle_split: 0.8
 save_path: "/dataFolder/mts3_datasets_processed/mediumMaze.pkl"
-url: "https://bwsyncandshare.kit.edu/s/SmRYcDj9HnSx97r/download"
+url: "https://drive.google.com/uc?id=1fwrLrV_28832OYat4YpWuNl51MEXbKlq"
 trajPerTask: 10
 downsample: 1
 episodic: False
